--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -9,6 +9,19 @@ html, body {
 }
 
 @layer utilities {
+    @keyframes blink {
+        0% ,100% {
+          opacity: 1;
+        } 
+        50% {
+          opacity: 0;
+        } 
+      }
+
+      .animate-blink {
+          animation: blink 0.8s step-end infinite;
+      }
+
     @keyframes loading {
       0% {
         transform: translate(-100%);
